--- a/stylesheet.css
+++ b/stylesheet.css
@@ -80,6 +80,7 @@ body::-webkit-scrollbar-button:increment:end {
 }
 #displaynews{
 	background-color:white;
+	background-color:rgba(255,255,255,.5);
 	width:400px;
 	height:300px;
 	margin-right:auto;
@@ -205,9 +206,144 @@ input[type=text]{
 .lgr{
 	font-size:140%;
 }
+.parent{
+	display:none;
+}
 @media print, screen and (max-width:1260px) {
-	.prof{
-		width:200px;
+	.sidebar{
+		width:10em;
+		border-right:5px solid #c5c5c5;
 	}
-
+	.sidebar ul li a{
+		font-size:1em;
+	}
+	.instructors{
+		height:auto;
+		width:60%;
+	}
+}
+@media print, screen and (max-width:800px){
+	.sidebar{
+		position:static;
+		width: 100%;
+		height:auto;
+		background-color:#353535;
+		background: linear-gradient(to right, #111111 0%,#353535 100%);
+		border-bottom: 3px solid #c5c5c5;
+		border-right:0px;
+		background-image:url('linen.png');
+	}
+	.vertical{
+		display:none;
+	}
+	.horizontal{
+		width:80%;
+	}
+	#illini{
+		float:left;
+		margin-top:0;
+	}
+	.innertext{
+		width:80%;
+	}
+	.inbar{
+		display: inline-block;
+        width: 120px;
+        height: 65px;
+        position: relative;
+        float:right;
+	}
+	.parent{
+		height: 100%;
+        width: auto;
+        display: block;
+        cursor: pointer;
+        line-height: 30px;
+        height: 65px;
+        border-radius: 5px;
+        background: #222222;
+		/*background: linear-gradient(135deg, rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%);
+        border: 1px solid #151515;*/
+        border-bottom: 0px solid #777;
+        color: #282D31;
+        font-weight: bold;
+        z-index: 2;
+        position: relative;
+        -webkit-transition: border-radius .1s linear, background .1s linear, z-index 0s linear;
+        -webkit-transition-delay: .8s;
+        text-align: center;
+	}
+	.parent p{
+		color:white;
+	}
+	.parent:hover, .content:hover ~.parent{
+		/*background:#353535;
+		background: linear-gradient(160deg, rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* W3C */
+		-webkit-transition-delay:0s, 0s, 0s;
+	}
+	.content:hover ~.parent{
+		border-bottom-left-radius:0;
+		border-bottom-right-radius:0;
+		z-index:0;
+	}
+	.content{
+		position: absolute;
+        top: 0;
+        display: block;
+        z-index: 1;
+        height: 0;
+        width: 99%;
+        padding-top: 65px;
+        -webkit-transition: height .5s ease;
+        -webkit-transition-delay: .4s;
+        border: 1px solid #151515;
+        border-right:0;
+        border-radius: 5px;
+	}
+	.inbar:active .content{
+		height: auto;
+        z-index: 3;
+        -webkit-transition-delay: 0s;
+	}
+	.content:hover{
+		height: auto;
+        z-index: 3;
+        -webkit-transition-delay: 0s;
+	}
+	.content ul{
+		background: #fff;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        height: 100%;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+	}
+	.content li:hover{
+		background:#eee;
+		color:#333;
+	}
+	.content li{
+		list-style: none;
+        text-align: left;
+        color: #888;
+        font-size: 14px;
+        line-height: 30px;
+        height: 30px;
+        padding-left: 10px;
+        border-top: 1px solid #ccc;
+	}
+	.content li:last-of-type{
+		border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+	}
+	ul li a{
+		color:#353535;
+	}
+	#displaynews{
+		width:90%;
+	}
+	.footer{
+		width:100%;
+	}
 }
