--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,21 +20,49 @@ a:hover{
 }
 body::-webkit-scrollbar {
     width: 6px;
+    height:6px;
 }
 body::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     background-color:#e7e7e7;
 }
 body::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
-  border-radius:5px;
+  	background-color: darkgrey;
+  	border-radius:5px;
 }
 body::-webkit-scrollbar-button:decrement {
 	height:10px;
+	width:10px;
 	background-color:grey;
 }
 body::-webkit-scrollbar-button:increment:end {
 	height:10px;
+	width:10px;
+	background-color:grey;
+}
+#displaynews::-webkit-scrollbar {
+    width: 6px;
+    height:6px;
+}
+#displaynews::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color:#e7e7e7;
+}
+#displaynews::-webkit-scrollbar-thumb {
+  	background-color: darkgrey;
+  	border-radius:5px;
+}
+#displaynews::-webkit-scrollbar-button:decrement {
+	height:10px;
+	width:10px;
+	background-color:grey;
+}
+#displaynews::-webkit-scrollbar-button:increment:end {
+	height:10px;
+	width:10px;
+	background-color:grey;
+}
+#displaynews::-webkit-scrollbar-corner{
 	background-color:grey;
 }
 .wrapper{
@@ -81,11 +109,12 @@ body::-webkit-scrollbar-button:increment:end {
 #displaynews{
 	background-color:white;
 	background-color:rgba(255,255,255,.5);
-	width:400px;
+	width:500px;
 	height:300px;
 	margin-right:auto;
 	margin-left:auto;
 	border-radius:5px;
+	overflow:scroll;
 }
 .sidebar{
 	position:fixed;
@@ -185,15 +214,15 @@ li a:hover{
 	margin:0;
 }
 #messagebox{
-	width:400px;
+	width:500px;
 	margin-left:auto;
 	margin-right:auto;
-	overflow:scroll;
+	overflow:auto;
 }
 input[type=text]{
 	font-size:89%;
 	height:29px;
-	width:395px;
+	width:495px;
 	background-color:#f2f2f2;
 	border:2px solid #e7e7e7;
 	border-radius:3px;
@@ -354,6 +383,12 @@ input[type=text]{
 	}
 	#displaynews{
 		width:90%;
+	}
+	#messagebox{
+		width:90%;
+	}
+	input[type=text]{
+		width:99%;
 	}
 	.footer{
 		width:100%;
