--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,18 +13,19 @@ body{
 a{
 	color:black;
 	text-decoration:none;
-	transition: text-decoration .4s;
+	-webkit-transition: text-decoration .4s;
+	        transition: text-decoration .4s;
 }
 a:hover{
 	text-decoration:underline;
 }
 body::-webkit-scrollbar {
-    width: 6px;
-    height:6px;
+	width: 6px;
+	height:6px;
 }
 body::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    background-color:#e7e7e7;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color:#e7e7e7;
 }
 body::-webkit-scrollbar-thumb {
   	background-color: darkgrey;
@@ -41,8 +42,8 @@ body::-webkit-scrollbar-button:increment:end {
 	background-color:grey;
 }
 #displaynews::-webkit-scrollbar {
-    width: 6px;
-    height:6px;
+	width: 6px;
+	height:6px;
 }
 #displaynews::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
@@ -82,7 +83,8 @@ body::-webkit-scrollbar-button:increment:end {
 	height:65px;
 	margin-top:10px;
 	border:1px solid transparent;
-	transition:border .3s;
+	-webkit-transition:border .3s;
+	        transition:border .3s;
 }
 #illini:hover{
 	border:1px solid orange;
@@ -122,6 +124,7 @@ body::-webkit-scrollbar-button:increment:end {
 	height:100%;
 	width: 17em;
 	background-color:#353535;
+	background: -webkit-linear-gradient(left, #111111 0%, #353535 100%);
 	background: linear-gradient(to right, #111111 0%,#353535 100%);
 	border-right: 10px solid #c5c5c5;
 	background-image:url('linen.png');
@@ -151,7 +154,8 @@ li a{
 	font-size:1.7em;
 	color:white;
 	text-decoration:none;
-	transition: color .4s;
+	-webkit-transition: color .4s;
+	        transition: color .4s;
 }
 li a:hover{
 	color:orange;
@@ -196,11 +200,24 @@ li a:hover{
 	margin-top:20px;
 	width:40%;
 	height:auto;
+	display:-webkit-box;
+	display:-webkit-flex;
+	display:-ms-flexbox;
 	display:flex;
-	flex-wrap:wrap;
-	justify-content:center;
-	align-items:flex-start;
-	align-content:space-between;
+	-webkit-flex-wrap:wrap;
+	    -ms-flex-wrap:wrap;
+	        flex-wrap:wrap;
+	-webkit-box-pack:center;
+	-webkit-justify-content:center;
+	    -ms-flex-pack:center;
+	        justify-content:center;
+	-webkit-box-align:start;
+	-webkit-align-items:flex-start;
+	    -ms-flex-align:start;
+	        align-items:flex-start;
+	-webkit-align-content:space-between;
+	    -ms-flex-line-pack:justify;
+	        align-content:space-between;
 	margin-left:auto;
 	margin-right:auto;
 }
@@ -269,6 +286,7 @@ input[type=text]{
 		width: 100%;
 		height:auto;
 		background-color:#353535;
+		background: -webkit-linear-gradient(left, #111111 0%, #353535 100%);
 		background: linear-gradient(to right, #111111 0%,#353535 100%);
 		border-bottom: 3px solid #c5c5c5;
 		border-right:0px;
