--- a/stylesheet.css
+++ b/stylesheet.css
@@ -122,7 +122,7 @@ body::-webkit-scrollbar-button:increment:end {
 	position:fixed;
 	float:left;
 	height:100%;
-	width: 17em;
+	width: 272px;
 	background-color:#353535;
 	background: -webkit-linear-gradient(left, #111111 0%, #353535 100%);
 	background: linear-gradient(to right, #111111 0%,#353535 100%);
@@ -146,6 +146,15 @@ body::-webkit-scrollbar-button:increment:end {
 	margin-left:auto;
 	margin-right:auto;
 	margin-top:5px;
+}
+.shorizontal{
+	height:4px;
+	width:400px;
+	border-radius:10px;
+	background-color:#353535;
+	margin-left:auto;
+	margin-right:auto;
+	margin-top:5px	;
 }
 .linkbar > li{
 	list-style:none;
@@ -297,6 +306,9 @@ input[type=text]{
 	}
 	.horizontal{
 		width:80%;
+	}
+	.shorizontal{
+		width:60%;
 	}
 	#illini{
 		float:left;
